-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.0
-
None
-
Visual C++ Compiler 15.0 64Bit
Debugger from Windows 10 SDK (Version 10.0.16299.15 AMD64)
-
-
48f8eca5746e945ba177d827ff925d80ad3982fd (qt-creator/qt-creator/4.9)
| For Gerrit Dashboard: QTCREATORBUG-22410 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 260878,2 | Debugger: normalize cdb reported brakpoint file names | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |