Debugger: normalize cdb reported brakpoint file names

Change-Id: If6b2ad2c3bc1084745690dd9e06df27290872eaf
Fixes: QTCREATORBUG-22410
Reviewed-by: hjk <hjk@qt.io>